[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/button/button.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameplay/gui/game_over_screen/game_over_screen.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.243137, 0.298039, 0.368627, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.172549, 0.239216, 0.333333, 1 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[node name="game_over_screen" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="panel" type="Panel" parent="."]
margin_left = 340.0
margin_top = 185.0
margin_right = 940.0
margin_bottom = 535.0
rect_min_size = Vector2( 600, 350 )
custom_styles/panel = SubResource( 4 )

[node name="margin_container" type="MarginContainer" parent="panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="vbox_container" type="VBoxContainer" parent="panel/margin_container"]
margin_left = 30.0
margin_top = 30.0
margin_right = 570.0
margin_bottom = 320.0
custom_constants/separation = 10

[node name="title" type="Label" parent="panel/margin_container/vbox_container"]
margin_right = 540.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "¡Game over!"
align = 1

[node name="summary" type="Label" parent="panel/margin_container/vbox_container"]
margin_top = 44.0
margin_right = 540.0
margin_bottom = 132.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "¡Has llegado al 0!"
align = 1
valign = 1
autowrap = true

[node name="taunt" type="Label" parent="panel/margin_container/vbox_container"]
margin_top = 142.0
margin_right = 540.0
margin_bottom = 230.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.992157, 0.878431, 0.764706, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="restart_button" parent="panel/margin_container/vbox_container" instance=ExtResource( 2 )]

[connection signal="pressed" from="panel/margin_container/vbox_container/restart_button" to="." method="_on_restart_button_pressed"]
